# ai-coder-agent

./: .gitignore  .importlinter  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db/migrations/: 001_init.sql  002_session.sql
docs/architecture/: 01-context.md  02-module-view.md  03-component-connector-view.md  04-behavioral-views.md  05-decisions.md  06-status-and-roadmap.md  07-design-first-proposal.md  08-analysis-phase-proposal.md  09-structured-requirements.md  README.md
eval/: design_step_eval.py  leaderboard.py  run_eval.py
examples/e2e-escrow-aac/: README.md  requirements-intake.yaml  run-trace.txt
examples/e2e-library-lending/: METRICS.md  README.md  lib-profile.yaml  (+1 more)
profiles/: eval-msfw.yaml  eval.yaml  msfw.yaml
tests/: test_analyst.py  test_app_wiring.py  test_arch_fitness.py  test_coder.py  test_deploy_gate.py  test_design_lint.py  test_design_step_eval.py  test_design_structurizr.py  test_design_traceability.py  test_designer.py  test_event_flow.py  test_gateway.py  test_git_delivery.py  test_git_server.py  test_integration_design.py  test_llm_budget.py  test_llm_factory.py  test_maven_build.py  test_maven_sandbox.py  test_mcp_live.py  test_memory_append_only.py  test_memory_inmemory.py  test_oracle_lint.py  test_orchestrator_loop.py  test_parallel.py  test_planner.py  test_postgres_memory.py  test_profile.py  test_render_contracts.py  test_repo_map.py  test_requirement_spec.py  test_session_state.py  test_structurizr_cli_parse.py  test_structurizr_lint.py  test_surefire_parser.py  test_tiering.py
(+95 files in other folders)
