[project]
name = "aicoder"
version = "0.0.1"
description = "AI Coder Agent — Hexagonal MCP Orchestrator (MSFW-first)"
# Upper-bounded: tree-sitter / pydantic-core wheels may lag the newest CPython.
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Adapter-layer deps. The core (domain/application) MUST NOT import these.
# import-linter + the arch fitness tests enforce that boundary.
tools = [
    "mcp>=1.2",              # MCP client + FastMCP servers   (M1)
    "tree-sitter>=0.23",     # Code-Reader AST                (M1)
    "tree-sitter-java>=0.23",
]
adapters = [
    "anthropic>=0.40",       # default LLM provider           (M2)
    "openai>=1.40",          # OpenAI-compatible provider (Ollama/vLLM/local) (M2)
    "psycopg[binary]>=3.1",  # Postgres + pgvector log        (M2)
    "langgraph>=0.2",        # control-loop state machine     (M2)
]
dev = [
    "pytest>=8.0",
    "import-linter>=2.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aicoder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
